cmake_minimum_required(VERSION 3.10)
project(PDC_Lab C)

set(CMAKE_C_STANDARD 11)

find_package(OpenMP REQUIRED)

add_executable(Task01 PDC_Lab/Lab01/Task01/InputOutput.c)
add_executable(Task02 PDC_Lab/Lab01/Task02/MatrixMult.c)
add_executable(Task03 PDC_Lab/Lab02/Task01/ThreadFact.c)
add_executable(Task04 PDC_Lab/Lab02/Task02/ThreadArray.c)
add_executable(Task07 PDC_Lab/Lab03/Task01/ParallelCountWithoutMutex.c
        PDC_Lab/Lab03/Task01/ParallelCountingWithMutex.c)
add_executable(Task08 PDC_Lab/Lab03/Task02/AccountSimulMutex.c)
add_executable(Task05 PDC_Lab/Lab04/Task01/ProdConsVar.c)
add_executable(Task06 PDC_Lab/Lab04/Task02/TrafficLightVarSimulate.c)
add_executable(Task09 PDC_Lab/Lab05/Task01/parallelArrayOpenMP.c)
add_executable(Task10 PDC_Lab/Lab05/Task02/matrixMultVectorOpenMP.c)
if(OpenMP_C_FOUND)
    set_target_properties(Task09 PROPERTIES COMPILE_FLAGS "${OpenMP_C_FLAGS}")
    set_target_properties(Task09 PROPERTIES LINK_FLAGS "${OpenMP_C_FLAGS}")
    target_link_libraries(Task09 PRIVATE ${OpenMP_C_LIBRARIES})
    set_target_properties(Task10 PROPERTIES COMPILE_FLAGS "${OpenMP_C_FLAGS}")
    set_target_properties(Task10 PROPERTIES LINK_FLAGS "${OpenMP_C_FLAGS}")
    target_link_libraries(Task10 PRIVATE ${OpenMP_C_LIBRARIES})
endif()
add_executable(Task11 PDC_Lab/Assignment01/primeArrayPthreads.c)
add_executable(Task12 PDC_Lab/Lab06/Activity/Scenerio_01/bank.c)
add_executable(Task13 PDC_Lab/Lab06/Activity/Scenerio_02/kitchen.c)
add_executable(Task14 PDC_Lab/Lab06/Activity/Scenerio_03/matrix.c)
